Fixes #939: Menu selection is going away from details section .Also tree arrow button is overlapping with text.

--- a/public/css/canonizer.css
+++ b/public/css/canonizer.css
@@ -2033,7 +2033,16 @@ a.verification-link:active {
     margin-right: 0.5rem;
     margin-bottom: 1rem
   }
-
   ul {
       display: grid;
+  }
+  select.namespace-selector{
+      min-width: unset !important;
+      max-width: calc(100% - 10px);
+  }
+  .mainouter li{
+      display: flex;
+  }
+  .tp-title {
+      margin-top: unset !important;
   }
